Parallelise migration OKAPI-939 (#1198)